--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,14 @@
   display: grid;
   max-width: 100%;
   max-height: 100%;
+  grid-template-areas: "header"
+                       "item2"
+                       "item3"
+                       "item4"
+                       "item5"
+                       "item6"
+                       "item7"
+                       "item8";
 }
 
 .header {
@@ -66,6 +74,9 @@ li {
   background-image: url("/images/block2.png");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
+  padding-bottom: 3%;
+
 }
 
 #onlineStore{
@@ -74,9 +85,10 @@ li {
 }
 
 #tryitNow {
-  width: 50%;
-  height: 5%;
+  width: 40%;
+  height: 8%;
   text-align: center;
+  font-size: 27px;
   padding: 15px 20px 15px 20px;
   color: white;
   background: rgb(249, 94, 28);
@@ -98,35 +110,72 @@ li {
   background-image: url("/images/block3.png");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
+  padding-bottom: 44%;
 }
 
 .item4 {
   background-image: url("/images/block4.png");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
+  padding-bottom: 56%;
 }
 
 .item5 {
-  background-color: rgb(5, 91, 11);
-  color: rgb(0, 0, 0);
-  padding: 80px;
+  background-image: url("/images/block5.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  padding-bottom: 56%;
 }
 
 .item6 {
-  background-color: rgb(2, 53, 60);
-  color: rgb(0, 0, 0);
-  padding: 80px;
+  background-image: url("/images/block6.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  padding-bottom: 55%;
 }
 
 .item7 {
-  box-decoration-break: clone;
-  background-color: rgb(102, 25, 102);
-  color: rgb(0, 0, 0);
-  padding: 80px;
+  background-image: url("/images/block7.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  padding-bottom: 30%;
 }
 
 .item8 {
-  background-image: url("/images/");
+  background-image: url("/images/block8.png");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
+  padding-bottom: 30%;
+}
+.item9 {
+  background-image: url("/images/block9.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 25%;
+}
+
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: rgba(61, 62, 61, 0.6); /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 60px; /* Rounded corners */
+  font-size: 14px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
 }
